feat: implement home layout

--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aphrodite": "^1.2.5",
     "normalize.css": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.13.0"
+    "react-scripts-ts": "2.13.0",
+    "react-with-styles": "^3.0.0",
+    "react-with-styles-interface-aphrodite": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
