--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,11 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "typeRoots": [
+      "./src/type",
+      "./node_modules/@types"
+    ]
   },
   "exclude": [
     "node_modules",
