--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
+    "experimentalDecorators": true,
     "typeRoots": [
       "./src/type",
       "./node_modules/@types"
