--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.3",
+    "@fortawesome/fontawesome-free-regular": "^5.0.6",
+    "@fortawesome/fontawesome-free-solid": "^5.0.6",
+    "@fortawesome/react-fontawesome": "0.1.0-3",
     "aphrodite": "^1.2.5",
+    "font-awesome": "^4.7.0",
     "normalize.css": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts-ts": "2.13.0",
     "react-with-styles": "^3.0.0",
-    "react-with-styles-interface-aphrodite": "^4.0.1"
+    "react-with-styles-interface-aphrodite": "^4.0.1",
+    "uninstall": "0.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
